<resources>
    <string name="app_name">In Plane Sight</string>=

    <!-- Nav Menu -->
    <string name="nav_menu_check_in">Search Flights</string>
    <string name="nav_menu_find">Find</string>
    <string name="nav_menu_leaderboards">Leaderboards</string>
    <string name="nav_menu_flight_info">Your Flights</string>
    <string name="nav_menu_account">Account</string>

    <!-- Check-In -->
    <string name="check_in_header">Let\'s check you in!</string>
    <string name="check_in_text">To continue, select your airport</string>
    <string name="check_in_select_airport">Select Flight</string>
    <string name="check_in_suggest_airport">Use my location</string>
    <string name="check_in_suggest_airport_toast">Updated selection based on your GPS location</string>

    <!-- Search Flights -->
    <string name="search_flights_header">Departing flights at </string>
    <string name="search_flights_airport"><b>Airport</b></string>
    <string name="search_flights_select_btn">Select Flight</string>
    <string name="search_flights_back_btn">Go back</string>
    <string name="search_flights_popup_heading">Is this your flight?</string>

    <!-- Flight Info Component -->
    <string name="flight_info_flight_number">Flight Number</string>
    <string name="flight_info_terminal">Terminal</string>
    <string name="flight_info_gate">Gate</string>
    <string name="flight_info_destination">Destination</string>
    <string name="flight_info_departing_time">Departs At</string>
    <string name="flight_info_status">Status</string>

    <!-- Sign In Popup -->
    <string name="sign_in_popup_header">Hol Up</string>
    <string name="sign_in_popup_text">It looks like you\'re not signed in. Only members who are signed in can post their scores to the leaderboards.</string>
    <string name="sign_in_popup_sign_in_btn">Sign In</string>
    <string name="sign_in_popup_start_hunt_btn">Start Hunt</string>

    <!-- Hunt -->
    <string name="start_hunt_header">You\'re all set!</string>
    <string name="start_hunt_txt">Keep an eye out for these locations while you walk around the airport.</string>
    <string name="start_hunt_btn_txt">Let\'s go</string>
    <string name="hunt_btn_enabled">Found It!</string>
    <string name="hunt_btn_disabled">Already found!</string>

    <!-- End Hunt Popup -->
    <string name="end_hunt_header">Way to go!</string>
    <string name="end_hunt_text">You scored a total of </string>
    <string name="end_hunt_score">69 points</string>
    <string name="end_hunt_dot">.</string>
    <string name="end_hunt_to_leaderboards">Check out the leaderboards to see how you scored.</string>
    <string name="end_hunt_btn">Let\'s go!</string>

    <!-- Flight Info -->
    <string name="flight_info_header">Your upcoming flight</string>

    <!-- Leaderboards -->
    <string name="leaderboards_header">Leaderboards</string>
    <string name="leaderboards_rank">Rank</string>
    <string name="leaderboards_name">Name</string>
    <string name="leaderboards_score">Score</string>
    <string name="leaderboards_date">Date</string>
    <string name="leaderboards_airport">ABCD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overviewBtnText">Get Started</string>
    <string name="hunt_page_title">Scavenger Hunt</string>
    <string name="hunt_name">Hunt Name</string>
    <string name="yvr_img1_desc">Airport large window wall</string>
    <string name="yvr_hunt1_desc">Hunt based in the [Vancouver Airport]</string>
    <string name="start_hunt">Start Hunt</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="new_hunt">New Hunt?</string>
    <string name="hunt_try_text">Try this hunt and see how you stack up against the best!</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="avatar_img">Avatar image</string>
    <string name="placeholder">Placeholder</string>
    <string name="Places_Test">Places Test</string>
    <string name="account">Account</string>
    <string name="nickname">Nickname:</string>
    <string name="email">Email:</string>
    <string name="data">Data</string>
    <string name="data2">Data</string>
    <string name="sign_out">Sign out</string>
    <string name="verify_email">Verify Email</string>
    <string name="end_hunt">End Hunt</string>
    <string name="found_location">Found Location!</string>
</resources>