<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.find.HuntFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:textColor="@color/teal_700"
        android:paddingLeft="10dp"
        android:text="@string/hunt_page_title" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:text="@string/hunt_name" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="4sp"
        android:text="@string/yvr_hunt1_desc"
        android:layout_gravity="center"
        android:backgroundTint="@color/orange"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@color/marine_blue"/>

    <Button
        android:id="@+id/btnFoundLocation"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_200"
        android:text="@string/found_location" />

    <Button
        android:id="@+id/btnEndHunt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_200"
        android:text="@string/end_hunt" />
</LinearLayout>