<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="50dp"
    android:paddingHorizontal="25dp">

    <TextView
        android:id="@+id/searchFlightsHeaderTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/check_in_header"
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <TextView
            android:id="@+id/checkInTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_text"
            android:textSize="24sp"/>

        <Spinner
            android:id="@+id/checkInAirportSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/checkInBtnSelectAirport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_select_airport"
            app:backgroundTint="@color/orange" />

        <Button
            android:id="@+id/checkInBtnSuggestAirport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_suggest_airport" />
    </LinearLayout>

</LinearLayout>