<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="50dp"
    android:paddingHorizontal="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/searchFlightsHeaderTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/search_flights_header"
            android:textAlignment="center"
            android:textSize="211sp" />

        <TextView
            android:id="@+id/searchFlightsAirportTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="@string/search_flights_airport"
            android:textAlignment="center"
            android:textSize="211sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/searchFlightsBtnSelectFlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_flights_select_btn"
            app:backgroundTint="@color/orange" />

        <Button
            android:id="@+id/searchFlightsBtnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_flights_back_btn" />
    </LinearLayout>

</LinearLayout>