<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.account.AccountFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="7"
    android:columnCount="1"
    android:padding="20dp"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:padding="20dp"
        android:text="@string/account"
        android:textColor="@color/marine_blue"
        android:fontFamily="@font/sono_bold"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:paddingHorizontal="20dp"
        android:text="@string/nickname"
        android:textColor="@color/teal_700"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/nicknameData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:paddingHorizontal="20dp"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/teal_700"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/emailData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="175dp"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/signoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_margin="10dp"
        android:text="@string/sign_out"
        android:backgroundTint="@color/teal_200"
        android:textSize="25sp" />

    <Button
        android:id="@+id/verify_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_margin="10dp"
        android:text="@string/verify_email"
        android:backgroundTint="@color/orange"
        android:textSize="25sp" />
</GridLayout>