<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/SignInBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/speech_bubble"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/SignInBg"
        android:layout_marginTop="25dp"
        android:paddingHorizontal="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SignInPopupHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sono_bold"
            android:gravity="center_horizontal"
            android:text="@string/sign_in_popup_header"
            android:textAlignment="center"
            android:textColor="@color/marine_blue"
            android:textSize="24sp"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/signInPopupTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sono"
            android:text="@string/sign_in_popup_text"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SignInBg"
        android:layout_marginBottom="50dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/signInPopupBtnStartHunt"
            android:text="@string/sign_in_popup_start_hunt_btn"
            android:fontFamily="@font/sono_bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="2.5dp"
            android:backgroundTint="@android:color/transparent"
            app:rippleColor="@color/marine_blue"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>

        <Button
            android:id="@+id/signInPopupBtnSignin"
            android:text="@string/sign_in_popup_sign_in_btn"
            android:fontFamily="@font/sono_bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.5dp"
            android:backgroundTint="@color/teal_200"/>
    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flippy"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitEnd"
        android:layout_below="@id/SignInBg"
        android:layout_alignParentRight="true"/>
</RelativeLayout>