<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/confirmFlightBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/speech_bubble"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/confirmFlightBg"
        android:layout_marginTop="25dp"
        android:paddingHorizontal="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchFlightPopupHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sono_bold"
            android:gravity="center_horizontal"
            android:text="@string/search_flights_popup_heading"
            android:textAlignment="center"
            android:textColor="@color/marine_blue"
            android:textSize="24sp"
            android:paddingBottom="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sono"
                android:text="@string/flight_info_flight_number"
                android:textColor="@color/aqua"
                android:textSize="18sp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/searchFlightPopupFlightNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sono_bold"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sono"
                android:text="@string/flight_info_destination"
                android:textColor="@color/aqua"
                android:textSize="18sp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/searchFlightPopupDestination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sono_bold"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAllCaps="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sono"
                android:text="@string/flight_info_departing_time"
                android:textColor="@color/aqua"
                android:textSize="18sp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/searchFlightPopupDepartureTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sono_bold"
                android:text="@string/placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAllCaps="true"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirmFlightBg"
        android:layout_marginBottom="75dp"
        android:gravity="center">
        <Button
            android:id="@+id/searchFlightsBtnSelectFlight"
            android:text="@string/search_flights_select_btn"
            android:fontFamily="@font/sono_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:backgroundTint="@android:color/transparent"
            app:rippleColor="@color/marine_blue"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flippy"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitEnd"
        android:layout_below="@id/confirmFlightBg"
        android:layout_alignParentRight="true">

    </ImageView>
</RelativeLayout>