<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/EndHuntBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/speech_bubble"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/EndHuntBg"
        android:layout_marginTop="25dp"
        android:paddingHorizontal="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/EndHuntHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sono_bold"
            android:gravity="center_horizontal"
            android:text="@string/end_hunt_header"
            android:textAlignment="center"
            android:textColor="@color/marine_blue"
            android:textSize="24sp"
            android:paddingBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/endHuntTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sono"
                android:text="@string/end_hunt_text"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/endHuntScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sono_bold"
                android:text="@string/end_hunt_score"
                android:textColor="@color/marine_blue"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/endHuntAfterScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sono"
            android:text="@string/end_hunt_text_2"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/EndHuntBg"
        android:layout_marginBottom="50dp"
        android:gravity="center">
        <Button
            android:id="@+id/endHuntBtn"
            android:text="@string/end_hunt_btn"
            android:fontFamily="@font/sono_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:backgroundTint="@android:color/transparent"
            app:rippleColor="@color/marine_blue"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flippy"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitEnd"
        android:layout_below="@id/EndHuntBg"
        android:layout_alignParentRight="true"/>
</RelativeLayout>